--- a/static/style.css
+++ b/static/style.css
@@ -1,11 +1,12 @@
 :root {
     --text-color: #333;
+    --font-size: 20px;
 
     --button-border-radius: 6px;
     --button-bkg-color: #007bff;
     --button-bkg-hover-color: #0062cc;
 
-    --section-border-radius: 6px;
+    --section-border-radius: 20px;
 }
 
 /* Reset default styles */
@@ -18,24 +19,26 @@
 /* Global styles */
 body {
     font-family: Arial, sans-serif;
-    font-size: 16px;
+    font-size: var(--font-size);
     line-height: 1.5;
     color: #333;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
 
 header {
+    position: fixed;
+    top: 0;
+    width: 100%;
     background-color: #e5e5e5;
-    padding: 20px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
 nav{
-    margin-top: 5px;
-}
-
-nav {
+    padding: 2vh;
     display: flex;
     justify-content: flex-start;
+    margin: auto;
 }
 
 nav ul {
@@ -46,8 +49,10 @@ nav ul {
 }
 
 nav li {
-    display: inline-block;
-    margin-right: 20px;
+    margin: auto;
+    height: 100%;
+    width: 100%;
+    text-align: center;
 }
 
 nav a {
@@ -55,7 +60,7 @@ nav a {
     color: var(--text-color);
 }
 
-.navbut a{
+.nav-buttons a{
     color: #333;
     border-radius: 5px;
     padding: 10px 20px;
@@ -63,7 +68,7 @@ nav a {
     transition: background-color 0.3s;
 }
 
-.navbut a:hover{
+.nav-buttons a:hover{
     background-color: #eee;
 }
 
@@ -71,7 +76,6 @@ nav a {
     background-color: #007bff;
     color: #fff;
     border-radius: 5px;
-    padding: 8px 10px;
     text-decoration: none;
     transition: background-color 0.3s;
     display: inline;
@@ -83,16 +87,15 @@ nav a {
 
 
 main {
-    max-width: 800px;
-    margin: 0 auto;
-    padding: 20px;
+    margin: auto 0;
 }
 
 .hero {
     background-color: #e5e5e5;
     padding: 40px;
     text-align: center;
-    margin-bottom: 40px;
+    margin: auto;
+    width: 75%;
     border-radius: var(--section-border-radius);
 }
 
@@ -150,10 +153,14 @@ main {
 
 /* Footer styles */
 footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
     background-color: #333;
     color: #fff;
     text-align: center;
-    padding: 20px;
+    padding: 8px;
+    margin: auto 0;
 }
 
 /* Sign-up form */
@@ -169,12 +176,8 @@ label {
     font-weight: bold;
 }
 
-#email, #password {
-    width: 45%;
-}
-
 label[for="email"], label[for="password"] {
-    width: 45%;
+    width: 75%;
     display: inline-block;
     text-align: left;
 }
@@ -183,7 +186,7 @@ input[type="email"], input[type="password"] {
     padding: 10px;
     border: none;
     border-radius: 3px;
-    width: 55%;
+    width: 75%;
     margin-bottom: 20px;
     display: inline-block;
 }
